python/testData/inspections/PyUnresolvedReferencesInspection/FromPackageImportBuiltin/a.py
from importSource import <error descr="Unresolved reference 'len'">len</error>

len()
